--- a/Documents/report/ref.bib
+++ b/Documents/report/ref.bib
@@ -206,10 +206,11 @@
 	keywords = {Computer Science - Computation and Language, Computer Science - Machine Learning}
 }
 
-@misc{karpathy_unreasonable_nodate,
+@misc{karpathy_unreasonable_2015,
 	title = {The {Unreasonable} {Effectiveness} of {Recurrent} {Neural} {Networks}},
 	url = {https://karpathy.github.io/2015/05/21/rnn-effectiveness/},
 	urldate = {2018-12-27},
+	year = {2015},
 	author = {Karpathy, Andrej}
 }
 
